# HoshiAI

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: language_options.json
ui/: main_window.py
ui/abstract/: window.py
ui/util/: contants.py
ui/widgets/: language_switch_widget.py  translation_widget.py
